# csa_lab4

./: .gitignore  README.md  isa.py  machine.py  pyproject.toml  test_golden.py  translator.py
.github/workflows/: ci.yml
golden/: addm.yml  cat_interrupt.yml  double_precision.yml  execution_token.yml  hello.yml  hello_user_name.yml  prob1_palindrome.yml  pushn.yml  sort_three.yml  test_golden.py
golden/cat_interrupt/: case.toml  source.fth
golden/double_precision/: case.toml  source.fth
golden/hello/: case.toml  source.fth
golden/hello_user_name/: case.toml  source.fth
golden/prob1_palindrome/: case.toml  source.fth
golden/sort_three/: case.toml  source.fth
