[project]
name = "csa-lab4"
version = "0.1.0"
description = "Forth-to-CISC translator and tick-accurate processor model"
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = [
    "example",
    "schemes",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"
files = [
    "isa.py",
    "translator.py",
    "machine.py",
    "test_golden.py",
]
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.csa_lab4]
test-command = "python -m unittest test_golden -v"
